<resources>
    <string name="app_name">Homework</string>
    <string name="home_work_1">Homework 1</string>
    <string name="home_work_2">Homework 2</string>
    <string name="home_work_3">Homework 3</string>
    <string name="homework_5">homework 5</string>
    <string name="homework_6">homework 6</string>
    <string name="homework_7">homework 7</string>
    <string name="find">find</string>
    <string name="enter_url">Enter URL</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="minsk_region">Minsk Region</string>
    <string name="rye">Rye</string>
    <string name="barley">Barley</string>
    <string name="corn">Corn</string>
    <string name="brest_region">Brest Region</string>
    <string name="gomel_region">Gomel Region</string>
    <string name="_0">0</string>
    <string name="homework_4">homework 4</string>
    <string name="add">add</string>
    <string name="show">show</string>
    <string name="enter_name">enter name</string>
    <string name="enter_url_of_image">enter URL of image</string>
    <string name="save">save</string>
    <string name="enter_description">enter description</string>
    <string name="http_pozdravok_ru_pozdravleniya_prazdniki_den_pobedy_4_htm">С Днем великой Победы Я вас поздравляю И мирного неба Над вами желаю! Пусть беды и войны Навечно уходят, А счастье с любовью В дом чаще заходят, Желаю Отечество Сильно любить, Всему человечеству В согласии жить!</string>
    <string name="show_postcard">show postcard</string>
    <string name="click_on_the_button_below_to_see_congratulations">Click on the button below to see congratulations</string>
    <string name="ok">Ok</string>
    <string name="sing_in">sing in</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_password">please enter password</string>
    <string name="apply">apply</string>
    <string name="registration">registration</string>
    <string name="registration_complete">registration is complete</string>
    <string name="welcome">Welcome</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="password_less_then_8">Password is less then 8 characters</string>
    <string name="homework_8">homework 8</string>
    <string name="add_new_type_of_coffee">Add new type of Coffee</string>
    <string name="name">Name</string>
    <string name="enter_coffee_name">Enter coffee name</string>
    <string name="enter_price_of_coffee">Enter price of coffee</string>
    <string name="price">Price</string>
    <string name="url">URL</string>
    <string name="update_coffee">Update coffee</string>
    <string name="update">Update</string>
    <string name="delete">delete</string>
    <string name="remove_coffee">Are you sure you want to remove the</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dollar">$</string>
    <string name="homework_9">homework 9</string>
    <string name="error">Error</string>
    <string name="percent">%</string>
    <string name="homework_12">homework 12</string>
</resources>