<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <EditText
        android:id="@+id/hw4_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Double_margin"
        android:hint="@string/enter_name"
        app:layout_constraintBottom_toTopOf="@+id/hw4_input_description"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/hw4_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Double_margin"
        android:hint="@string/enter_description"
        app:layout_constraintBottom_toTopOf="@+id/hw4_input_URL"
        app:layout_constraintTop_toBottomOf="@+id/hw4_input_name"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/hw4_input_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Double_margin"
        android:hint="@string/enter_url_of_image"
        app:layout_constraintBottom_toTopOf="@+id/button_hw4_save"
        app:layout_constraintTop_toBottomOf="@+id/hw4_input_description"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_hw4_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Double_margin"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>